syntax = "proto2";

package sf.solana.raw.blocks.v1;

message Reward {
  required string pubkey = 1;
  required uint64 lamports = 2;
  required uint64 post_balance = 3;
  required uint64 reward_type = 4;
  required string commission = 5;
}

message BlockStat {
  required string block_date = 1;
  required string previous_block_hash = 2;
  required string blockhash = 3;
  required uint64 parent_slot = 4;
  repeated Reward rewards = 5;
  required uint64 block_time = 6;
  required uint64 block_height = 7;
  required uint64 slot = 8;
}